--- a/Folder.Inspector.Tool/Folder.Inspector.Tool.csproj
+++ b/Folder.Inspector.Tool/Folder.Inspector.Tool.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+      <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Folder.Hierarchy.Inspector\Folder.Hierarchy.Inspector.csproj" />
+  </ItemGroup>
 
 </Project>
